Alignment corrected

--- a/style.css
+++ b/style.css
@@ -29,15 +29,20 @@ main {
 
 .skills,
 .About {
-  padding: 1rem;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .experience {
   line-height: 1.5;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .experience ul {
   margin: 2rem;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .education {
@@ -52,6 +57,8 @@ main {
 .left {
   background-color: white;
   padding: 1rem;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
 
 .thin-red-border {
